# axum-mvc

./: .env  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile.toml
src/: main.rs
